--- a/src/css/kota.css
+++ b/src/css/kota.css
@@ -2,10 +2,10 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
     padding: 0;
-    
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat; 
+    background-image: url('/img/Bandung.jpg');
 }
 
 .header-container {
