--- a/src/css/booked.css
+++ b/src/css/booked.css
@@ -7,10 +7,11 @@ body, h1, h2, p, label {
 body {
   font-family: 'Arial', sans-serif;
   background-color: #f4f4f4;
+  background-image: url('/img/Bandung.jpg');
 }
 
 header {
-  background-color: #333;
+  background-color: rgb(2, 2, 53);
   color: #fff;
   text-align: center;
   padding: 20px;
@@ -26,7 +27,7 @@ header {
 }
 
 h1, h2 {
-  color: #333;
+  color: #ffffff;
 }
 
 .form-group {
@@ -52,8 +53,8 @@ select {
 
 input[type="submit"] {
   padding: 10px 20px;
-  background-color: #333;
-  color: #fff;
+  background-color: #000000;
+  color: #ab0909;
   border: none;
   border-radius: 5px;
   cursor: pointer;
